1998-12-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am: Use OBJCFLAGS instead of CFLAGS, and add
	-Wno-implicit-int to OBJCFLAGS instead of CPPFLAGS.

	* Colormap.m ([Colormap -setColor:ToName:]): Switch to virtual
	colormap and retry if XAllocColor fails -- don't revert to white.

1998-12-10  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Colormap.m ([Colormap -setColor:ToRed:Green:Blue:]): Scale to
	256 but trim at 255.  Use rgb:r/g/b syntax instead of #RRGGBB
	syntax.
	([Colormap -setColor:ToName:]): Use XLookupColor, using
	screen-matching instead of exact pixel values.

	* internal.m (x_get_managed_toplevel_window,
	x_set_private_colormap): New internal functions.
	(tkobjc_raster_setColormap): Sync up Tk things and call
	x_set_private_colormap if it is different from the default.

1998-11-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* WindowGeometryRecord.m ([WindowGeometryRecord -lispIn:]): Get
	value lists directly from index.
	(getValueList): Remove.

1998-11-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am: Add -Wno-implicit-int (but this may not be portable
	enough).

	* WindowGeometryRecord.[hm]: Remove lispInCreate: stub (will 
	inherit).

	* ArchivedGeometryWidget.h Button.h ButtonPanel.h Canvas.h
	CanvasAbstractItem.h CanvasItem.h CheckButton.h Circle.h
	ClassDisplayHideButton.h ClassDisplayLabel.h Colormap.h
	CompleteProbeDisplayLabel.h CompositeItem.h Entry.h Form.h Frame.h
	Graph.h Histogram.h InputWidget.h Label.h Line.h LinkItem.h
	MessageProbeEntry.h NodeItem.h OvalNodeItem.h Pixmap.h
	ProbeCanvas.h Raster.h Rectangle.h RectangleNodeItem.h
	ScheduleItem.h SimpleProbeDisplayHideButton.h SuperButton.h
	TextItem.h VarProbeEntry.h VarProbeLabel.h Widget.h
	WindowGeometryRecord.h ZoomRaster.h: Conform to respective
	external protocol instead of `new features' protocol.
	Add phase tags where missing.

	* ButtonPanel.m ClassDisplayHideButton.m Circle.m
	ClassDisplayLabel.m CompleteProbeDisplayLabel.m CompositeItem.m