@@ -41,6 +41,7 @@ void tkobjc_deleteEventHandler (id widget, Tk_EventProc proc);
 void tkobjc_animate_message (id srcWidget, id destWidget, int sx, int sy, int dx, int dy, BOOL triggerFlag, unsigned sleepTime);
 void tkobjc_move (id toplevel, int x, int y);
 
+BOOL tkobjc_setColor (Colormap *colormap, const char *colorName, PixelValue *pvptr);
 void tkobjc_raster_create (Raster *raster);
 void tkobjc_raster_erase (Raster *raster);
 void tkobjc_raster_clear (Raster *raster, unsigned oldWidth, unsigned oldHeight);
